# Open-Skills-Manager

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
.claude/: settings.json
.claude/agents/: bmad-analyst.md  bmad-architect.md  bmad-brainstorming.md  bmad-design-thinking.md  bmad-dev.md  bmad-innovation.md  bmad-pm.md  bmad-presentation.md  bmad-problem-solver.md  bmad-storyteller.md  bmad-tea.md  bmad-tech-writer.md  bmad-ux-designer.md
.github/: CI-CD.md
.github/workflows/: ci.yml  release.yml
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
docs/: tauri-webdriver.md
e2e/: README.md  package-lock.json  package.json  wdio.conf.mjs
scripts/: sync-version.js  version-bump.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  paths.rs
src-tauri/src/commands/: config.rs  deploy.rs  error.rs  error_codes.rs  global.rs  icloud.rs  ide.rs  library.rs  locale.rs  migration.rs  mod.rs  performance.rs  project.rs  search.rs  security.rs  storage.rs  sync.rs  theme.rs  update.rs
src-tauri/src/parsers/: mod.rs  skill_md.rs
src-tauri/src/services/: icloud_bridge.rs  mod.rs  search_index.rs  skill.rs
src-tauri/src/storage/: conflict.rs  conflict_store.rs  migrate.rs  mod.rs  service.rs  sync.rs  tests.rs  types.rs
src-tauri/src/utils/: error_codes.rs  fs.rs  logger.rs  mod.rs
(+361 files in other folders)
