[package]
name = "claude-code-skills-manager"
version = "0.2.1"
description = "A Tauri App for managing Claude Code Skills"
authors = ["alex"]
edition = "2021"

[lib]
name = "claude_code_skills_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
zip = "2"
tempfile = "3"
dirs = "5"
tauri-plugin-webdriver-automation = "0.1.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
log = "0.4"
